2A/05_Projet_GL/src/test/deca/context/valid/sans_objet/39_convfloat_dans_print.deca
// Description :
//     Test sur convfloat avec print  
// Resultats :
//    Valide 
//
// Historique :
// cree le 12/01/2024

{
    print(1 + 2.2);

    print(1.1 + 2);

}