2A/05_Projet_GL/src/test/deca/context/invalid/complet/12_decl_field_type_inde.deca
// Description :
//     Decl champ avec unn type non definie 
// Resultats :
//    ligne 9 : identificateur de type non definie 
// Historique :
//  cree le 16/01/2024

class A {
    String a ;
}